--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Push files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp://ni10518519_1:hp9HVHsb@usmi161.gamedata.io/
+        server: test
         username: ni10518519_1
-        password: ${{ secrets.ftp_password }}
+        password: ${{ secrets.ftp_Pass }}
