prep for first main branch push

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Push files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: test
+        server: ftp://ni10518519_1:hp9HVHsb@usmi161.gamedata.io/
         username: ni10518519_1
         password: ${{ secrets.ftp_Pass }}
         exclude: |
