--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,10 +30,10 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ftp://ni10518519_1:hp9HVHsb@usmi161.gamedata.io/
-          username: ni10518519_1
-          password: ${{ secrets.ftp_Pass }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASS }}
           dry-run: true
-          port: 21
+          port: ${{ secrets.FTP_PORT }}
           exclude: |
             **/.git*
             **/.git*/**
