--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,6 +34,9 @@ jobs:
           password: ${{ secrets.FTP_PASS }}
           dry-run: true
           port: ${{ secrets.FTP_PORT }}
+          protocol: ftps
+          local-dir: ./dayzps_missions/dayzOffline.enoch/
+          server-dir: ./dayzps_missions/dayzOffline.enoch/
           exclude: |
             **/.git*
             **/.git*/**
