--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Push files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ftp://ni10518519_2:K7RxCtan@usmi068.gamedata.io
+          server: ni10518519_2:K7RxCtan@usmi068.gamedata.io
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
           dry-run: true
