--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
           server: usmi068.gamedata.io
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
-          dry-run: true
+          dry-run: false
           port: ${{ secrets.FTP_PORT }}
           protocol: ftps
           local-dir: ./dayzps_missions/dayzOffline.enoch/
