--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Log File Reader
 
 # Controls when the workflow will run
 on:
